# Robomaster

./: .gitignore  .gitmodules  README.md  color.py  main.py  one.py  pre_template.py  record.sh  tool_web.txt
images/: 1.txt  100.txt  1000.txt  10005.txt  10008.txt  10064.txt  10087.txt  1018.txt  1226.txt  1227.txt  1229.txt  123.txt  1235.txt  1236.txt  1238.txt  1378.txt  1379.txt  138.txt  1381.txt  1384.txt  1385.txt  1387.txt  1388.txt  1605.txt  1606.txt  1824.txt  1825.txt  183.txt  1950.txt  1956.txt  211.txt  2450.txt  2463.txt  2620.txt  3189.txt  3362.txt  3368.txt  4291.txt  4293.txt  4295.txt  (+7 more)
src/enemy_estimator/: .clang-format  CMakeLists.txt  package.xml
src/enemy_estimator/include/enemy_estimator/: ekf.h  enemy_estimator.h  enemy_estimator_utils.h
src/enemy_estimator/src/: enemy_estimator_armor.cpp  enemy_estimator_callback.cpp  enemy_estimator_enemy.cpp  enemy_estimator_node.cpp
src/enemy_predictor/: CMakeLists.txt  package.xml
src/enemy_predictor/config/: enemy_predictor_params.yaml
src/enemy_predictor/include/enemy_predictor/: EnPredictor_utils.h  ekf.h  enemy_kf.hpp  enemy_predictor.h
src/enemy_predictor/launch/: enemy_predictor.launch.py
src/enemy_predictor/src/: EnPredictor_armor.cpp  EnPredictor_callback.cpp  EnPredictor_enemy.cpp  EnPredictor_getcmd.cpp  EnPredictor_node.cpp  enemy_kf.cpp
src/energy_predictor/: CMakeLists.txt  package.xml
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/config/: camera_info.yaml  camera_info12.yaml  camera_params.yaml  camera_params12.yaml
src/hik_camera/include/hik_camera/: hik_camera.h
src/hik_camera/launch/: calibration.launch.py  calibration_launch.py  hik_camera.launch.py  hik_camera.launch12.py
src/hik_camera/src/: hik_camera.cpp
src/rm_can_driver/: CMakeLists.txt  package.xml
src/rm_can_driver/config/: can_driver.yaml
src/rm_can_driver/include/rm_can_driver/: msg_receiver.h  rm_can_driver.h  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
src/rm_can_driver/launch/: can_driver.launch.py
src/rm_can_driver/src/: rm_can_driver.cpp  socket_can_common.cpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_sender.cpp
src/rm_detector/: CMakeLists.txt  package.xml
src/rm_detector/config/: detector_params.yaml
src/rm_detector/include/detector/: detector.h  detector_node.h  detector_trad.h  detector_trt.h  net_decoder.h
src/rm_detector/launch/: rm_detector.launch.py
src/rm_detector/src/: detector.cpp  detector_node.cpp  detector_trad.cpp  detector_trt.cpp  detector_vino.cpp  net_decoder.cpp
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: Armor.msg  Control.msg  Detection.msg  EnemyStates.msg  Rmrobot.msg
src/rm_lagacy_replay/: CMakeLists.txt  package.xml
src/rm_lagacy_replay/config/: rm_lagacy_replay.yaml
src/rm_lagacy_replay/include/rm_lagacy_replay/: rm_lagacy_replay.h
src/rm_lagacy_replay/launch/: rm_lagacy_replay.launch.py
src/rm_lagacy_replay/src/: rm_lagacy_replay.cpp
src/rm_republish/: CMakeLists.txt  package.xml
src/rm_republish/config/: rm_republish.yaml
src/rm_republish/include/rm_republish/: rm_repunlish.h
src/rm_republish/launch/: rm_republish.launch.py
src/rm_republish/src/: rm_republish.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/include/rm_serial_driver/: rm_serial_driver.h
src/rm_serial_driver/launch/: serial_driver.launch.py
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/rm_utils/: CMakeLists.txt  package.xml
src/rm_utils/include/rm_utils/: Position_Calculator.hpp  ballistic.hpp  data.h  frame_info.h  perf.hpp  soft_crc.h
src/rm_utils/src/: Position_Calculator.cpp  ballistic.cpp  common.cpp  data.cpp  datatypes.cpp  frame_info.cpp  perf.cpp  soft_crc.cpp
src/rmcv_bringup/: CMakeLists.txt  package.xml
src/rmcv_bringup/config/balance1/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rmcv_bringup/config/balance2/: camera_info.yaml  node_params.yaml
src/rmcv_bringup/config/hero/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rmcv_bringup/config/mai2/: camera_info.yaml  node_params.yaml
src/rmcv_bringup/config/rudder/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rmcv_bringup/config/sentry/: camera_info.yaml  node_params.yaml
src/rmcv_bringup/launch/: debug.launch.py  lagacy_replay.launch.py  multi_cam.launch.py  no_hardware.launch.py  normal.launch.py
src/rmcv_bringup/urdf/: rm_gimbal.urdf.xacro
src/video_recorder/: CMakeLists.txt  package.xml
src/video_recorder/config/: node_params.yaml
src/video_recorder/launch/: recorder.launch.py
src/video_recorder/src/: recorder.cpp
